--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,4 @@
-.page {
+/* .page {
   --gray-rgb: 0, 0, 0;
   --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
   --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
@@ -109,8 +109,8 @@ a.secondary {
 }
 
 /* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
+/* @media (hover: hover) and (pointer: fine) { */
+/* a.primary:hover {
     background: var(--button-primary-hover);
     border-color: transparent;
   }
@@ -165,4 +165,4 @@ a.secondary {
   .logo {
     filter: invert();
   }
-}
+} */
